Updated FreeType details for Windows.

--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -60,9 +60,12 @@ ELSE()
       ${OGG_LIBRARIES}
       ${VORBIS_LIBRARIES}
       ${PORTAUDIO_LIBRARIES}
-      ${FREETYPE_LIBRARIES}
-      ${BZIP2_LIBRARIES}
+      ${FREETYPE_LIBRARIES}    
       )
+
+  IF(NOT WIN32)
+    TARGET_LINK_LIBRARIES(small3d PUBLIC ${BZIP2_LIBRARIES})
+  ENDIF()
 
   ADD_EXECUTABLE(small3dTest main.cpp)
 
