--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,9 @@ ELSE()
   FIND_PACKAGE(VORBIS REQUIRED)
   FIND_PACKAGE(PORTAUDIO REQUIRED)
   FIND_PACKAGE(FREETYPE REQUIRED)
-  FIND_PACKAGE(Bzip2 REQUIRED)
+  IF(NOT WIN32)
+    FIND_PACKAGE(Bzip2 REQUIRED)
+  ENDIF()
   
   IF(WIN32)
     FILE(GLOB dlls "deps/lib/*.dll")
