Updated Debian installation and instructions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,9 @@ ELSE()
   FIND_PACKAGE(OGG REQUIRED)
   FIND_PACKAGE(VORBIS REQUIRED)
   FIND_PACKAGE(PORTAUDIO REQUIRED)
-  FIND_PACKAGE(FREETYPE REQUIRED)
+  FIND_PACKAGE(Freetype REQUIRED)
   IF(NOT WIN32)
-    FIND_PACKAGE(Bzip2 REQUIRED)
+    FIND_PACKAGE(BZip2 REQUIRED)
   ENDIF()
   
   IF(WIN32)
