--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -21,7 +21,8 @@ ENDIF()
 
 IF(APPLE)
   SET_TARGET_PROPERTIES(small3d PROPERTIES LINK_FLAGS
-      "-framework AudioUnit AudioToolbox CoreAudio")
+      "-framework OpenGL Cocoa IOKit AudioUnit AudioToolbox CoreAudio")
+
 ELSEIF(WIN32 AND NOT MINGW)
   SET_TARGET_PROPERTIES(small3d PROPERTIES LINK_FLAGS
     "/NODEFAULTLIB:\"LIBCMTD\" /NODEFAULTLIB:\"LIBCMT\"")
@@ -41,7 +42,7 @@ ELSE()
   INCLUDE_DIRECTORIES(
       ${OPENGL_INCLUDE_DIR}
       ${SDL2_INCLUDE_DIR}
-      ${GLEW_INCLUDE_DIRS}
+      ${GLFW_INCLUDE_DIRS}
       ${PNG_INCLUDE_DIRS}
       ${GLM_INCLUDE_DIRS}
       ${OGG_INCLUDE_DIRS}
@@ -54,7 +55,7 @@ ELSE()
 
   TARGET_LINK_LIBRARIES(small3d PUBLIC
       ${OPENGL_LIBRARIES}
-      ${SDL2_LIBRARY}
+      ${GLFW_LIBRARY}
       ${GLEW_LIBRARIES}
       ${PNG_LIBRARIES}
       ${OGG_LIBRARIES}
@@ -74,13 +75,7 @@ ELSE()
 
   FIND_PACKAGE(GTest REQUIRED)
   INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
-  TARGET_LINK_LIBRARIES(small3dTest PUBLIC ${GTEST_BOTH_LIBRARIES} small3d)
-
+  TARGET_LINK_LIBRARIES(small3dTest PUBLIC ${GTEST_BOTH_LIBRARIES} small3d )
+  SET_TARGET_PROPERTIES(small3dTest PROPERTIES LINK_FLAGS
+      "-framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo")
 ENDIF()
-
-
-
-
-
-
-
