--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ ELSE()
 
   SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
   FIND_PACKAGE(OpenGL REQUIRED)
-  FIND_PACKAGE(SDL2 REQUIRED)
+  FIND_PACKAGE(GLFW REQUIRED)
   FIND_PACKAGE(GLEW REQUIRED)
   FIND_PACKAGE(PNG REQUIRED)
   FIND_PACKAGE(GLM)
