Simplified deployment of independent build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,5 +48,8 @@ IF (WIN32)
   FILE(COPY "small3d/resources" DESTINATION "./small3d/src/Debug")
   FILE(COPY "small3d/resources" DESTINATION "./small3d/src/Release")
 ELSE (WIN32)
-  FILE(COPY "small3d/resources" DESTINATION "./small3d/src")
+  FILE(COPY "small3d/resources" DESTINATION "./bin")
+  FILE(COPY "small3d/include" DESTINATION ".")
+  FILE(COPY "deps/include/glm" DESTINATION "./include")
+  FILE(COPY "deps/include/GLFW" DESTINATION "./include")
 ENDIF (WIN32)
