Parameterised choice between SDL and GLFW.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ IF("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
   #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything -Wno-c++98-compat -pedantic")
 ENDIF()
 
+IF(DEFINED WITH_GLFW AND WITH_GLFW)
+  ADD_DEFINITIONS(-DSMALL3D_GLFW)
+ENDIF()
 
 IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
   INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
