Parameterised SDL/GLFW linking.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,11 @@ ELSE()
 
   SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
   FIND_PACKAGE(OpenGL REQUIRED)
+IF(DEFINED WITH_GLFW AND WITH_GLFW)
   FIND_PACKAGE(GLFW REQUIRED)
+ELSE()
+  FIND_PACKAGE(SDL2 REQUIRED)
+ENDIF()
   FIND_PACKAGE(GLEW REQUIRED)
   FIND_PACKAGE(PNG REQUIRED)
   FIND_PACKAGE(GLM)
