--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -39,23 +39,29 @@ IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
 
 ELSE()
 
+  IF(DEFINED WITH_GLFW AND WITH_GLFW)
+    INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
+    TARGET_LINK_LIBRARIES(small3d PUBLIC ${GLFW_LIBRARIES})
+  ELSE()
+    INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})
+    TARGET_LINK_LIBRARIES(small3d PUBLIC ${SDL2_LIBRARY})
+  ENDIF()
+
   INCLUDE_DIRECTORIES(
       ${OPENGL_INCLUDE_DIR}
-      ${SDL2_INCLUDE_DIR}
-      ${GLFW_INCLUDE_DIRS}
       ${PNG_INCLUDE_DIRS}
       ${GLM_INCLUDE_DIRS}
       ${OGG_INCLUDE_DIRS}
       ${VORBIS_INCLUDE_DIR}
       ${PORTAUDIO_INCLUDE_DIRS}
       ${FREETYPE_INCLUDE_DIRS}
-      ${BZIP2_INCLUDE_DIRS})
+      ${BZIP2_INCLUDE_DIRS}
+      )
 
   ADD_DEFINITIONS(${PNG_DEFINITIONS})
 
   TARGET_LINK_LIBRARIES(small3d PUBLIC
       ${OPENGL_LIBRARIES}
-      ${GLFW_LIBRARY}
       ${GLEW_LIBRARIES}
       ${PNG_LIBRARIES}
       ${OGG_LIBRARIES}
