--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,11 +26,11 @@ ELSE()
 
   SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
   FIND_PACKAGE(OpenGL REQUIRED)
-IF(DEFINED WITH_GLFW AND WITH_GLFW)
-  FIND_PACKAGE(GLFW REQUIRED)
-ELSE()
-  FIND_PACKAGE(SDL2 REQUIRED)
-ENDIF()
+  IF(DEFINED WITH_GLFW AND WITH_GLFW)
+    FIND_PACKAGE(GLFW REQUIRED)
+  ELSE()
+    FIND_PACKAGE(SDL2 REQUIRED)
+  ENDIF()
   FIND_PACKAGE(GLEW REQUIRED)
   FIND_PACKAGE(PNG REQUIRED)
   FIND_PACKAGE(GLM)
@@ -45,18 +45,12 @@ ENDIF()
   IF(WIN32)
     FILE(GLOB dlls "deps/lib/*.dll")
     FOREACH(dll ${dlls})
-      FILE(COPY ${dll} DESTINATION "./small3d/src/Debug")
-      FILE(COPY ${dll} DESTINATION "./small3d/src/Release")
+      FILE(COPY ${dll} DESTINATION "./bin")
     ENDFOREACH()
   ENDIF()
 ENDIF()
 
-IF (WIN32)
-  FILE(COPY "small3d/resources" DESTINATION "./small3d/src/Debug")
-  FILE(COPY "small3d/resources" DESTINATION "./small3d/src/Release")
-ELSE (WIN32)
-  FILE(COPY "small3d/resources" DESTINATION "./bin")
-  FILE(COPY "small3d/include" DESTINATION ".")
-  FILE(COPY "deps/include/glm" DESTINATION "./include")
-  FILE(COPY "deps/include/GLFW" DESTINATION "./include")
-ENDIF (WIN32)
+FILE(COPY "deps/include" DESTINATION ".")
+FILE(COPY "deps/lib" DESTINATION ".")
+FILE(COPY "small3d/include" DESTINATION ".")
+FILE(COPY "small3d/resources" DESTINATION "./bin")
