--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -9,22 +9,21 @@ ADD_LIBRARY(small3d BoundingBoxSet.cpp Exception.cpp GetTokens.cpp
 
 TARGET_INCLUDE_DIRECTORIES(small3d PUBLIC "${small3d_SOURCE_DIR}/small3d/include/small3d")
 
-IF(NOT WIN32 OR MINGW)
-  IF(APPLE)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
-  ELSE()
-    TARGET_COMPILE_OPTIONS(small3d PUBLIC "-std=c++11" "-Wl,--no-as-needed") # Avoid gcc problems in Ubuntu
-  ENDIF()
-ELSE()
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
-ENDIF()
-
 IF(WIN32 AND NOT MINGW)
-  SET_TARGET_PROPERTIES(small3d PROPERTIES LINK_FLAGS
-    "/NODEFAULTLIB:\"LIBCMTD\" /NODEFAULTLIB:\"LIBCMT\"")
+
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
+  SET_TARGET_PROPERTIES(small3d PROPERTIES LINK_FLAGS "/NODEFAULTLIB:\"LIBCMTD\" /NODEFAULTLIB:\"LIBCMT\"")
+
+ELSEIF(APPLE)
+
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
+
 ELSEIF(UNIX AND NOT APPLE)
+
+  TARGET_COMPILE_OPTIONS(small3d PUBLIC "-std=c++11" "-Wl,--no-as-needed") # Avoid gcc problems in Ubuntu
   TARGET_LINK_LIBRARIES(small3d PUBLIC "-ljack -lasound")
-ENDIF()
+
+ENDIF(WIN32 AND NOT MINGW)
 
 IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
 
@@ -33,7 +32,7 @@ IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
   set(CMAKE_SHARED_LINKER_FLAGS "${CONAN_SHARED_LINKER_FLAGS}")
   TARGET_LINK_LIBRARIES(small3d PUBLIC ${CONAN_LIBS})
 
-ELSE()
+ELSE(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
 
   IF(DEFINED WITH_GLFW AND WITH_GLFW)
     INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
@@ -68,22 +67,18 @@ ELSE()
 
   IF(NOT WIN32)
     TARGET_LINK_LIBRARIES(small3d PUBLIC ${BZIP2_LIBRARIES})
-  ENDIF()
+  ENDIF(NOT WIN32)          
 
-  ADD_CUSTOM_COMMAND(TARGET small3d POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different       
-    "${small3d_BINARY_DIR}/small3d/src/libsmall3d.a"    
-    "${small3d_BINARY_DIR}/lib/libsmall3d.a")           
-
+  # Unit testing
+  
   ADD_EXECUTABLE(small3dTest main.cpp)
 
-  TARGET_INCLUDE_DIRECTORIES(small3dTest PUBLIC
-    "${small3d_SOURCE_DIR}/small3d/include")
+  TARGET_INCLUDE_DIRECTORIES(small3dTest PUBLIC "${small3d_SOURCE_DIR}/small3d/include")
 
   FIND_PACKAGE(GTest REQUIRED)
   INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
   TARGET_LINK_LIBRARIES(small3dTest PUBLIC ${GTEST_BOTH_LIBRARIES} small3d )
-
+  
   IF(APPLE)
 
     SET(SMALL3DTEST_LINK_FLAGS "-framework AudioUnit -framework AudioToolbox -framework CoreAudio")
@@ -94,10 +89,6 @@ ELSE()
 
     SET_TARGET_PROPERTIES(small3dTest PROPERTIES LINK_FLAGS "${SMALL3DTEST_LINK_FLAGS}")
 
-    ADD_CUSTOM_COMMAND(TARGET small3dTest POST_BUILD
-      COMMAND ${CMAKE_COMMAND} -E copy_if_different       
-      "${small3d_BINARY_DIR}/small3d/src/small3dTest"     
-      "${small3d_BINARY_DIR}/bin/small3dTest")
-  ENDIF()
+  ENDIF(APPLE)
   
-ENDIF()
+ENDIF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
