Some corrections for Linux. There are still problems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,10 +40,12 @@ ELSE(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
     SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${small3d_BINARY_DIR}/lib")
   ENDIF(MSVC)
 
-  FILE(COPY "deps/include" DESTINATION ".")
-  FILE(COPY "deps/lib" DESTINATION ".")
-  FILE(COPY "deps/bin" DESTINATION ".")
-  
+  IF(NOT UNIX OR APPLE)
+    FILE(COPY "deps/include" DESTINATION ".")
+    FILE(COPY "deps/lib" DESTINATION ".")
+    FILE(COPY "deps/bin" DESTINATION ".")
+  ENDIF(NOT UNIX OR APPLE)
+
   SUBDIRS(small3d)
   IF (APPLE OR WIN32)
     SET(DEPS_PATH "${CMAKE_SOURCE_DIR}/deps")
