No need to copy deps bin directory on MacOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,9 @@ ELSE(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
   IF(NOT UNIX OR APPLE)
     FILE(COPY "deps/include" DESTINATION ".")
     FILE(COPY "deps/lib" DESTINATION ".")
-    FILE(COPY "deps/bin" DESTINATION ".")
+    IF(NOT APPLE)
+      FILE(COPY "deps/bin" DESTINATION ".")
+    ENDIF(NOT APPLE)
   ENDIF(NOT UNIX OR APPLE)
 
   SUBDIRS(small3d)
