Fixed cmake CMP0054 policy warning.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,10 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
 
 PROJECT(small3d)
 
-IF("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+IF(${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
   #Uncomment for very strict warning messages
   #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything -Wno-c++98-compat -pedantic")
-ENDIF("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+ENDIF(${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
 
 FILE(COPY "small3d/include" DESTINATION ".")
 FILE(COPY "small3d/resources" DESTINATION "./bin")
@@ -23,22 +23,22 @@ IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
 ELSE(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
 
   SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${small3d_BINARY_DIR}/bin")
-  IF(MSVC)
+  IF(WIN32 AND NOT MINGW)
     SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${small3d_BINARY_DIR}/bin")
     SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${small3d_BINARY_DIR}/bin")
-  ENDIF(MSVC)
+  ENDIF(WIN32 AND NOT MINGW)
 
   SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${small3d_BINARY_DIR}/lib")
-  IF(MSVC)
+  IF(WIN32 AND NOT MINGW)
     SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${small3d_BINARY_DIR}/lib")
     SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${small3d_BINARY_DIR}/lib")
-  ENDIF(MSVC)
+  ENDIF(WIN32 AND NOT MINGW)
 
   SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${small3d_BINARY_DIR}/lib")
-  IF(MSVC)
+  IF(WIN32 AND NOT MINGW)
     SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${small3d_BINARY_DIR}/lib")
     SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${small3d_BINARY_DIR}/lib")
-  ENDIF(MSVC)
+  ENDIF(WIN32 AND NOT MINGW)
 
   IF(NOT UNIX OR APPLE)
     FILE(COPY "deps/include" DESTINATION ".")
