Enabling unit testing for conan builds

--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -68,8 +68,17 @@ ELSE(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
   IF(NOT WIN32)
     TARGET_LINK_LIBRARIES(small3d PUBLIC ${BZIP2_LIBRARIES})
   ENDIF(NOT WIN32)          
+  
+ENDIF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
 
-  # Unit testing
+# Unit testing
+
+IF(DEFINED BUILD_UNIT_TESTS AND BUILD_UNIT_TESTS)
+
+  IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN AND(APPLE OR WIN32))
+    SET(DEPS_PATH "${CMAKE_SOURCE_DIR}/deps")
+    SET(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};${DEPS_PATH}")
+  ENDIF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN AND(APPLE OR WIN32))
   
   ADD_EXECUTABLE(small3dTest main.cpp)
 
@@ -90,5 +99,5 @@ ELSE(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
     SET_TARGET_PROPERTIES(small3dTest PROPERTIES LINK_FLAGS "${SMALL3DTEST_LINK_FLAGS}")
 
   ENDIF(APPLE)
-  
-ENDIF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
+
+ENDIF(DEFINED BUILD_UNIT_TESTS AND BUILD_UNIT_TESTS)
