CMakeLists files to lowercase

--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-ADD_LIBRARY(small3d BoundingBoxSet.cpp Exception.cpp GetTokens.cpp
+add_library(small3d BoundingBoxSet.cpp Exception.cpp GetTokens.cpp
   Image.cpp Logger.cpp MathFunctions.cpp Model.cpp
   Renderer.cpp SceneObject.cpp
   WavefrontLoader.cpp SoundPlayer.cpp ../include/small3d/BoundingBoxSet.hpp
@@ -7,42 +7,42 @@ ADD_LIBRARY(small3d BoundingBoxSet.cpp Exception.cpp GetTokens.cpp
   ../include/small3d/Renderer.hpp ../include/small3d/SceneObject.hpp
   ../include/small3d/SoundPlayer.hpp ../include/small3d/SoundData.hpp ../include/small3d/WavefrontLoader.hpp)
 
-TARGET_INCLUDE_DIRECTORIES(small3d PUBLIC "${small3d_SOURCE_DIR}/small3d/include/small3d")
+target_include_directories(small3d PUBLIC "${small3d_SOURCE_DIR}/small3d/include/small3d")
 
-IF(WIN32 AND NOT MINGW)
+if(WIN32 AND NOT MINGW)
 
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
-  SET_TARGET_PROPERTIES(small3d PROPERTIES LINK_FLAGS "/NODEFAULTLIB:\"LIBCMTD\" /NODEFAULTLIB:\"LIBCMT\"")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
+  set_target_properties(small3d PROPERTIES LINK_FLAGS "/NODEFAULTLIB:\"LIBCMTD\" /NODEFAULTLIB:\"LIBCMT\"")
 
-ELSEIF(APPLE)
+elseif(APPLE)
 
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
 
-ELSEIF(UNIX AND NOT APPLE)
+elseif(UNIX AND NOT APPLE)
 
-  TARGET_COMPILE_OPTIONS(small3d PUBLIC "-std=c++11" "-Wl,--no-as-needed") # Avoid gcc problems in Ubuntu
-  TARGET_LINK_LIBRARIES(small3d PUBLIC "-ljack -lasound")
+  target_compile_options(small3d PUBLIC "-std=c++11" "-Wl,--no-as-needed") # Avoid gcc problems in Ubuntu
+  target_link_libraries(small3d PUBLIC "-ljack -lasound")
 
-ENDIF(WIN32 AND NOT MINGW)
+endif(WIN32 AND NOT MINGW)
 
-IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
+if(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
 
   set(CMAKE_C_FLAGS "${CONAN_C_FLAGS}")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CONAN_CXX_FLAGS}")
   set(CMAKE_SHARED_LINKER_FLAGS "${CONAN_SHARED_LINKER_FLAGS}")
-  TARGET_LINK_LIBRARIES(small3d PUBLIC ${CONAN_LIBS})
+  target_link_libraries(small3d PUBLIC ${CONAN_LIBS})
 
-ELSE(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
+else(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
 
-  IF(DEFINED WITH_GLFW AND WITH_GLFW)
-    INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
-    TARGET_LINK_LIBRARIES(small3d PUBLIC ${GLFW_LIBRARIES})
-  ELSE()
-    INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})
-    TARGET_LINK_LIBRARIES(small3d PUBLIC ${SDL2_LIBRARY})
-  ENDIF()
+  if(DEFINED WITH_GLFW AND WITH_GLFW)
+    include_directories(${GLFW_INCLUDE_DIRS})
+    target_link_libraries(small3d PUBLIC ${GLFW_LIBRARIES})
+  else()
+    include_directories(${SDL2_INCLUDE_DIR})
+    target_link_libraries(small3d PUBLIC ${SDL2_LIBRARY})
+  endif()
 
-  INCLUDE_DIRECTORIES(
+  include_directories(
     ${OPENGL_INCLUDE_DIR}
     ${PNG_INCLUDE_DIRS}
     ${GLM_INCLUDE_DIRS}
@@ -53,9 +53,9 @@ ELSE(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
     ${BZIP2_INCLUDE_DIRS}
     )
 
-  ADD_DEFINITIONS(${PNG_DEFINITIONS})
+  add_definitions(${PNG_DEFINITIONS})
 
-  TARGET_LINK_LIBRARIES(small3d PUBLIC
+  target_link_libraries(small3d PUBLIC
     ${OPENGL_LIBRARIES}
     ${GLEW_LIBRARIES}
     ${PNG_LIBRARIES}
@@ -65,39 +65,39 @@ ELSE(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
     ${FREETYPE_LIBRARIES}    
     )
 
-  IF(NOT WIN32)
-    TARGET_LINK_LIBRARIES(small3d PUBLIC ${BZIP2_LIBRARIES})
-  ENDIF(NOT WIN32)          
+  if(NOT WIN32)
+    target_link_libraries(small3d PUBLIC ${BZIP2_LIBRARIES})
+  endif(NOT WIN32)          
   
-ENDIF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
+endif(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
 
 # Unit testing
 
-IF(DEFINED BUILD_UNIT_TESTS AND BUILD_UNIT_TESTS)
+if(DEFINED BUILD_UNIT_TESTS AND BUILD_UNIT_TESTS)
 
-  IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN AND(APPLE OR WIN32))
-    SET(DEPS_PATH "${CMAKE_SOURCE_DIR}/deps")
-    SET(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};${DEPS_PATH}")
-  ENDIF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN AND(APPLE OR WIN32))
+  if(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN AND(APPLE OR WIN32))
+    set(DEPS_PATH "${CMAKE_SOURCE_DIR}/deps")
+    set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};${DEPS_PATH}")
+  endif(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN AND(APPLE OR WIN32))
   
-  ADD_EXECUTABLE(small3dTest main.cpp)
+  add_executable(small3dTest main.cpp)
 
-  TARGET_INCLUDE_DIRECTORIES(small3dTest PUBLIC "${small3d_SOURCE_DIR}/small3d/include")
+  target_include_directories(small3dTest PUBLIC "${small3d_SOURCE_DIR}/small3d/include")
 
-  FIND_PACKAGE(GTest REQUIRED)
-  INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
-  TARGET_LINK_LIBRARIES(small3dTest PUBLIC ${GTEST_BOTH_LIBRARIES} small3d )
+  find_package(GTest REQUIRED)
+  include_directories(${GTEST_INCLUDE_DIRS})
+  target_link_libraries(small3dTest PUBLIC ${GTEST_BOTH_LIBRARIES} small3d )
   
-  IF(APPLE)
+  if(APPLE)
 
-    SET(SMALL3DTEST_LINK_FLAGS "-framework AudioUnit -framework AudioToolbox -framework CoreAudio")
+    set(SMALL3DTEST_LINK_FLAGS "-framework AudioUnit -framework AudioToolbox -framework CoreAudio")
 
-    IF(DEFINED WITH_GLFW AND WITH_GLFW)
-      SET(SMALL3DTEST_LINK_FLAGS "${SMALL3DTEST_LINK_FLAGS} -framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo")
-    ENDIF()
+    if(DEFINED WITH_GLFW AND WITH_GLFW)
+      set(SMALL3DTEST_LINK_FLAGS "${SMALL3DTEST_LINK_FLAGS} -framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo")
+    endif()
 
-    SET_TARGET_PROPERTIES(small3dTest PROPERTIES LINK_FLAGS "${SMALL3DTEST_LINK_FLAGS}")
+    set_target_properties(small3dTest PROPERTIES LINK_FLAGS "${SMALL3DTEST_LINK_FLAGS}")
 
-  ENDIF(APPLE)
+  endif(APPLE)
 
-ENDIF(DEFINED BUILD_UNIT_TESTS AND BUILD_UNIT_TESTS)
+endif(DEFINED BUILD_UNIT_TESTS AND BUILD_UNIT_TESTS)
