--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,81 +1,81 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.0.2)
 
-PROJECT(small3d)
+project(small3d)
 
-IF(${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
+if(${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
   #Uncomment for very strict warning messages
   #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything -Wno-c++98-compat -pedantic")
-ENDIF(${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
+endif(${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
 
-FILE(COPY "small3d/include" DESTINATION ".")
-FILE(COPY "small3d/resources" DESTINATION "./bin")
+file(COPY "small3d/include" DESTINATION ".")
+file(COPY "small3d/resources" DESTINATION "./bin")
 
-IF(DEFINED WITH_GLFW AND WITH_GLFW)
-  ADD_DEFINITIONS(-DSMALL3D_GLFW)
-ENDIF(DEFINED WITH_GLFW AND WITH_GLFW)
+if(DEFINED WITH_GLFW AND WITH_GLFW)
+  add_definitions(-DSMALL3D_GLFW)
+endif(DEFINED WITH_GLFW AND WITH_GLFW)
 
-IF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
+if(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
   
-  INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-  CONAN_BASIC_SETUP()
-  SUBDIRS(small3d)
+  include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+  conan_basic_setup()
+  subdirs(small3d)
 
-ELSE(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
+else(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
 
-  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${small3d_BINARY_DIR}/bin")
-  IF(WIN32 AND NOT MINGW)
-    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${small3d_BINARY_DIR}/bin")
-    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${small3d_BINARY_DIR}/bin")
-  ENDIF(WIN32 AND NOT MINGW)
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${small3d_BINARY_DIR}/bin")
+  if(WIN32 AND NOT MINGW)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${small3d_BINARY_DIR}/bin")
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${small3d_BINARY_DIR}/bin")
+  endif(WIN32 AND NOT MINGW)
 
-  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${small3d_BINARY_DIR}/lib")
-  IF(WIN32 AND NOT MINGW)
-    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${small3d_BINARY_DIR}/lib")
-    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${small3d_BINARY_DIR}/lib")
-  ENDIF(WIN32 AND NOT MINGW)
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${small3d_BINARY_DIR}/lib")
+  if(WIN32 AND NOT MINGW)
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${small3d_BINARY_DIR}/lib")
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${small3d_BINARY_DIR}/lib")
+  endif(WIN32 AND NOT MINGW)
 
-  SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${small3d_BINARY_DIR}/lib")
-  IF(WIN32 AND NOT MINGW)
-    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${small3d_BINARY_DIR}/lib")
-    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${small3d_BINARY_DIR}/lib")
-  ENDIF(WIN32 AND NOT MINGW)
+  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${small3d_BINARY_DIR}/lib")
+  if(WIN32 AND NOT MINGW)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${small3d_BINARY_DIR}/lib")
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${small3d_BINARY_DIR}/lib")
+  endif(WIN32 AND NOT MINGW)
 
-  IF(NOT UNIX OR APPLE)
-    FILE(COPY "deps/include" DESTINATION ".")
-    FILE(COPY "deps/lib" DESTINATION ".")
-    IF(NOT APPLE)
-      FILE(COPY "deps/bin" DESTINATION ".")
-    ENDIF(NOT APPLE)
-  ENDIF(NOT UNIX OR APPLE)
+  if(NOT UNIX OR APPLE)
+    file(COPY "deps/include" DESTINATION ".")
+    file(COPY "deps/lib" DESTINATION ".")
+    if(NOT APPLE)
+      file(COPY "deps/bin" DESTINATION ".")
+    endif(NOT APPLE)
+  endif(NOT UNIX OR APPLE)
 
-  SUBDIRS(small3d)
-  IF (APPLE OR WIN32)
-    SET(DEPS_PATH "${CMAKE_SOURCE_DIR}/deps")
-    SET(CMAKE_PREFIX_PATH ${DEPS_PATH})
-    IF (APPLE)
-      SET(GLEW_LIBRARY "${DEPS_PATH}/lib/libGLEW.a")
-    ENDIF ()
-  ENDIF ()
+  subdirs(small3d)
+  if (APPLE OR WIN32)
+    set(DEPS_PATH "${CMAKE_SOURCE_DIR}/deps")
+    set(CMAKE_PREFIX_PATH ${DEPS_PATH})
+    if (APPLE)
+      set(GLEW_LIBRARY "${DEPS_PATH}/lib/libGLEW.a")
+    endif ()
+  endif ()
 
-  SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+  set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
   
-  IF(DEFINED WITH_GLFW AND WITH_GLFW)
-    FIND_PACKAGE(GLFW REQUIRED)
-  ELSE()
-    FIND_PACKAGE(SDL2 REQUIRED)
-  ENDIF()
+  if(DEFINED WITH_GLFW AND WITH_GLFW)
+    find_PACKAGE(GLFW REQUIRED)
+  else()
+    find_PACKAGE(SDL2 REQUIRED)
+  endif()
 
-  IF(NOT WIN32)
-    FIND_PACKAGE(BZip2 REQUIRED)
-  ENDIF(NOT WIN32)
+  if(NOT WIN32)
+    find_PACKAGE(BZip2 REQUIRED)
+  endif(NOT WIN32)
   
-  FIND_PACKAGE(OpenGL REQUIRED)
-  FIND_PACKAGE(GLEW REQUIRED)
-  FIND_PACKAGE(PNG REQUIRED)
-  FIND_PACKAGE(GLM)
-  FIND_PACKAGE(OGG REQUIRED)
-  FIND_PACKAGE(VORBIS REQUIRED)
-  FIND_PACKAGE(PORTAUDIO REQUIRED)
-  FIND_PACKAGE(Freetype REQUIRED)
+  find_package(OpenGL REQUIRED)
+  find_package(GLEW REQUIRED)
+  find_package(PNG REQUIRED)
+  find_package(GLM)
+  find_package(OGG REQUIRED)
+  find_package(VORBIS REQUIRED)
+  find_package(PORTAUDIO REQUIRED)
+  find_package(Freetype REQUIRED)
 
-ENDIF(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
+endif(DEFINED BUILD_WITH_CONAN AND BUILD_WITH_CONAN)
