--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,7 @@ find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(PNG REQUIRED)
 find_package(GLM)
-find_package(OGG)
-find_package(Ogg)
+find_package(OGG REQUIRED)
 find_package(VORBIS REQUIRED)
 find_package(PORTAUDIO REQUIRED)
 find_package(Freetype REQUIRED)
