--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,6 @@ find_package(PNG REQUIRED)
 find_package(GLM)
 find_package(OGG REQUIRED)
 find_package(VORBIS REQUIRED)
-find_package(PORTAUDIO REQUIRED)
+find_package(Portaudio REQUIRED)
 find_package(Freetype REQUIRED)
 
