--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ test_script:
   - conan export coding3d/stable
   - cd ..\\..
   - git clone https://github.com/dimi309/small3d-tutorial
-  - cd small3d-tutorial\\ChaseTheGoat
+  - cd small3d-tutorial\\ChaseTheGoat3D
   - mkdir build
   - cd build
   - conan install .. --build missing
