Building Release config.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,4 +23,4 @@ test_script:
   - cd build
   - conan install .. --build missing
   - cmake -G"Visual Studio 14 2015 Win64" ..
-  - cmake --build .
+  - cmake --build . --config Release
