--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,19 @@ branches:
   only:
     - master
 env:
+  global:
+    - CONAN_UPLOAD=1
+    - CONAN_REFERENCE="small3d/1.1.0"
+    - CONAN_USERNAME="coding3d"
+    - CONAN_CHANNEL="testing"
+    - CONAN_TOTAL_PAGES=1
+    - CONAN_CURRENT_PAGE=1
 
+  matrix:
+    - CONAN_GCC_VERSIONS=4.8 CONAN_USE_DOCKER=1
+    - CONAN_GCC_VERSIONS=4.9 CONAN_USE_DOCKER=1
+    - CONAN_GCC_VERSIONS=5.2 CONAN_USE_DOCKER=1
+    - CONAN_GCC_VERSIONS=5.3 CONAN_USE_DOCKER=1
 matrix:
    include:
        - os: osx
