--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 os: linux
 sudo: required
 language: python
+branches:
+  only:
+    - master
 install:
-  - ./.travis/install.sh
+  - sudo ./.travis/install.sh
 script:
   - echo hello
