--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
   - sudo apt-get update
   - sudo apt-get install --only-upgrade cmake
 script:
-  - sudo chmod -R 777 /home/travis/.conan/settings.yml
+  - conan user
+  - sudo chmod -R 777 /home/travis/.conan
   - chmod +x ./.travis/run.sh
   - ./.travis/run.sh
