--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
-os: linux
 language: python
 branches:
   only:
     - master
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+    - os: osx
+      osx_image: xcode7.2
 install:
   - chmod +x ./.travis/install.sh
   - sudo ./.travis/install.sh
