More specific visual studio detection.

--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -57,9 +57,9 @@ endif(NOT WIN32)
 
 add_executable(small3dTest main.cpp)
 
-if(WIN32 AND NOT MINGW)
+if(MSVC)
   set_target_properties(small3dTest PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${small3d_BINARY_DIR}/bin")
-endif(WIN32 AND NOT MINGW)
+endif(MSVC)
 
 target_include_directories(small3dTest PUBLIC "${small3d_SOURCE_DIR}/small3d/include")
 
