--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,7 @@ environment:
     CONAN_CHANNEL: "testing"
     CONAN_TOTAL_PAGES: 4
     CONAN_REMOTES: "https://api.bintray.com/conan/dimi309/conan-packages"
+    CONAN_UPLOAD: "https://api.bintray.com/conan/dimi309/conan-packages"
 
     matrix:
         - CONAN_CURRENT_PAGE: 1
