--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -9,14 +9,15 @@ target_include_directories(small3d PUBLIC "${small3d_SOURCE_DIR}/small3d/include
 
 if(DEFINED BUILD_TESTS AND BUILD_TESTS)
   
-  file(COPY "resources" DESTINATION "./bin")
   add_executable(unittests main.cpp)
+  file(COPY "${small3d_SOURCE_DIR}/small3d/resources" DESTINATION "${small3d_BINARY_DIR}/bin")
+  target_include_directories(unittests PUBLIC "${small3d_SOURCE_DIR}/small3d/include")
   target_link_libraries(unittests PUBLIC small3d "${CONAN_LIBS}")
   set_target_properties(unittests PROPERTIES LINK_FLAGS "${CONAN_EXE_LINKER_FLAGS}")
 
   if(MSVC)
     set_target_properties(unittests PROPERTIES LINK_FLAGS_RELEASE "-NODEFAULTLIB:MSVCRTD")
-    set_target_properties(unittests PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${unittests_BINARY_DIR}/bin")
+    set_target_properties(unittests PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${small3d_BINARY_DIR}/bin")
   endif()
   
 endif(DEFINED BUILD_TESTS AND BUILD_TESTS)
