--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
     - CONAN_CHANNEL="testing"
     - CONAN_REMOTES="https://api.bintray.com/conan/dimi309/conan-packages"
     - CONAN_UPLOAD="https://api.bintray.com/conan/dimi309/conan-packages"
-    - CONAN_REFERENCE="small3d/master"
+    - CONAN_REFERENCE="small3d/1.3.0"
 
 linux: &linux
    os: linux
