--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@
 env:
   global:
     - CONAN_USERNAME="dimi309"
-    - CONAN_CHANNEL="testing"
+    - CONAN_CHANNEL="stable"
     - CONAN_REMOTES="https://api.bintray.com/conan/dimi309/conan-packages"
     - CONAN_UPLOAD="https://api.bintray.com/conan/dimi309/conan-packages"
-    - CONAN_REFERENCE="small3d/master"
+    - CONAN_REFERENCE="small3d/1.3.0"
 
 linux: &linux
    os: linux
