--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ environment:
     CONAN_USERNAME: "dimi309"
     CONAN_CHANNEL: "stable"
     CONAN_TOTAL_PAGES: 2
-    CONAN_REMOTES: "https://api.bintray.com/conan/dimi309/conan-packages"
+    CONAN_REMOTES: "https://api.bintray.com/conan/dimi309/conan-packages, https://api.bintray.com/conan/jgsogo/conan-packages"
     CONAN_UPLOAD: "https://api.bintray.com/conan/dimi309/conan-packages"
 
     matrix:
